updates to regime_detection notebook

--- a/notebooks/regime_detection.ipynb
+++ b/notebooks/regime_detection.ipynb
@@ -1675,6 +1675,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "89681645",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "regime",
+         "rawType": "int32",
+         "type": "integer"
+        },
+        {
+         "name": "count",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "1a992241-a90b-4228-aa47-9bc0445a15cb",
+       "rows": [
+        [
+         "1",
+         "1990"
+        ],
+        [
+         "2",
+         "359"
+        ],
+        [
+         "0",
+         "274"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/plain": [
+       "regime\n",
+       "1    1990\n",
+       "2     359\n",
+       "0     274\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['regime'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "239eeee9",
    "metadata": {},
@@ -1682,7 +1740,7 @@
     "We can classify the regimes by the following:\n",
     "* Regime 0: positive return, high volatility, high VIX\n",
     "* Regime 1: no return, low vol, low VIX\n",
-    "* Regime 2: negative return, med-high volatility, med-high VIX"
+    "* Regime 2: negative return, high volatility, high VIX"
    ]
   },
   {
@@ -1880,7 +1938,11 @@
    "id": "075e536f",
    "metadata": {},
    "source": [
-    "In the above chart, the colored bars represent the confidence interval and the small vertical black lines represent the mean. We can concretely state that the mean daily return and 21-day rolling volatility exhibit zero overlapping confidence intervals between the regimes. This would imply that the algo has done a good job at distinctly identifying the different regimes at each timestep. The VIX level, however, does show some overlap in the confidence intervals between Regime 0 and Regime 2. This would imply there might need to be some work to get better regime detection."
+    "In the above chart, the colored bars represent the confidence interval and the small vertical black lines represent the mean. \n",
+    "\n",
+    "Observations:\n",
+    "* The mean daily return and 21-day rolling volatility exhibit zero overlapping confidence intervals between the regimes. This implies that the algo has done a good job at distinctly identifying the different regimes at each timestep.\n",
+    "* The VIX level, however, does show some overlap in the confidence intervals between Regime 0 and Regime 2. It's not necessarily a bad thing, as this might imply that this specific feature is not a strong separator between those two regimes."
    ]
   },
   {
@@ -1963,6 +2025,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0f1ae9c7",
+   "metadata": {},
+   "source": [
+    "Let's start by specifically looking at k=3 clusters (our algo from the notebook so far):\n",
+    "* Regime 0 is large and has no negatives --> a good cluster\n",
+    "* Regime 1 is decently sized and has a negative peak --> iffy cluster\n",
+    "* Regime 2 is very small/thin and has a small negative peak as well --> likely a \"bad\" or weak cluster\n",
+    "\n",
+    "I wouldn't say this model looks like a home run - there's some slight ambiguity, but overall this is some good structure and the model is easy to interpret. It's worth looking at k=2 and k=4.\n",
+    "\n",
+    "k=2\n",
+    "* Regime 1 has decent size but still shows negative peaks\n",
+    "* Regime 0 is still large with no negatives\n",
+    "* This suggests there's not much benefit moving to k=2\n",
+    "\n",
+    "k=4\n",
+    "* Regimes 0, 2, and 3 all look better than in k=3 - better sizing and smaller negatives\n",
+    "* Regime 1, however, is so tiny that it might likely be noise\n",
+    "* k=4 cluster separation is definitely and improvement over k=3\n",
+    "* However, added complexity without interpretability or economic clarity of 4 regimes is more difficult as compared to k=3. I'm not sure this is helpful either\n",
+    "\n",
+    "Ultimately, we'll stick with k=3 as it provides a good balance between cluster quality and interpretability.\n",
+    "\n",
+    "One thing to note as well: in general, the majority of returns will be positive over this time period as the market index will rise. It's no surprise then that Regime 0 (positive returns with high volatility) is easy to fit and has a good silhouette profile. Regime 2 for k=3, on the other hand, are negative returns and high volatility. This is much more unlikely, and so it too is not really a huge surprise that the silhouette visual for this regime is a tiny sliver."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6c83f259",
    "metadata": {},
    "source": [
@@ -1970,8 +2060,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc8b5cf4",
+   "metadata": {},
+   "source": [
+    "Elbow method to find the optimal k for number of clusters isn't super helpful here because in finance the domain knowledge and interpretability of clusters largely takes precedence. What would k=20 tell us?\n",
+    "\n",
+    "Let's still look at it, but largely just as an exercise to visualize what this might look like in a stock market environment."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "f48186e0",
    "metadata": {},
    "outputs": [
@@ -1979,13 +2079,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WCSS (Inertia): 4229.84\n"
+      "WCSS (Inertia) for 2 clusters: 5292.60\n",
+      "WCSS (Inertia) for 3 clusters: 4229.84\n",
+      "WCSS (Inertia) for 4 clusters: 3039.61\n",
+      "WCSS (Inertia) for 5 clusters: 2696.51\n"
      ]
     }
    ],
    "source": [
-    "inertia = KMeans(n_clusters=3, random_state=42).fit(X_scaled).inertia_\n",
-    "print(f\"WCSS (Inertia): {inertia:.2f}\")"
+    "for i in range(2, 6):\n",
+    "    inertia = KMeans(n_clusters=i, random_state=42).fit(X_scaled).inertia_\n",
+    "    print(f\"WCSS (Inertia) for {i} clusters: {inertia:.2f}\")"
    ]
   },
   {
@@ -2021,12 +2125,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "495816b1",
+   "metadata": {},
+   "source": [
+    "Thinking ahead to being able to programmatically provide a \"best\" number of clusters to the end user, let's look at how we might do that..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d61b2e50",
+   "metadata": {},
+   "source": [
+    "## Progammatic k Clusters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1937e1fc",
+   "execution_count": 19,
+   "id": "72085269",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def select_best_k(X, k_range=range(2, 6)):\n",
+    "    scores = []\n",
+    "    for k in k_range:\n",
+    "        model = KMeans(n_clusters=k, random_state=42).fit(X)\n",
+    "        labels = model.labels_\n",
+    "        score = silhouette_score(X, labels)\n",
+    "        scores.append((k, score))\n",
+    "    \n",
+    "    best_k, best_score = max(scores, key=lambda x: x[1])\n",
+    "    return best_k, scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "812ab138",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2,\n",
+       " [(2, 0.5005194054017175),\n",
+       "  (3, 0.4964883514574492),\n",
+       "  (4, 0.4432350990256981),\n",
+       "  (5, 0.33575384844365475)])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "select_best_k(X_scaled)"
+   ]
   }
  ],
  "metadata": {
